discussion/kv_engine/141635/141635_rev46_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Define bootstrap interface [2.2/3]

Define a bootstrap interface during startup and allow
for starting up without any interfaces.

Change-Id: I1bf375dedddfd20902607e235bb0aaadb0d835e5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 46: Patch Set 45 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 08:59:25.000000000
Message: 
Patch Set 46: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9766/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9766/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9766/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8361/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36729/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/286/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19348/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11767/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11489/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 12:04:34.000000000
Message: 
Patch Set 46:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9784/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9784/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9784/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8361/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36729/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/286/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19348/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11767/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11489/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
